--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,23 @@
-asgiref==3.6.0
-certifi==2022.12.7
+asgiref==3.7.2
 charset-normalizer==3.0.1
-Django==4.1.5
-django-appconf==1.0.5
-django-cors-headers==3.13.0
-django-environ==0.9.0
+colorama==0.4.6
+Django==5.0.2
+django-cors-headers==4.3.1
+django-environ==0.11.2
 djangorestframework==3.14.0
-djangorestframework-simplejwt==5.2.2
-fire==0.5.0
-gunicorn==20.1.0
-idna==3.4
-PyJWT==2.6.0
+djangorestframework-simplejwt==5.3.1
+gunicorn==21.2.0
+iniconfig==2.0.0
+packaging==23.2
+pluggy==1.4.0
+psycopg==3.1.18
+psycopg-binary==3.1.18
+PyJWT==2.8.0
+pytest==8.0.1
 pytz==2022.7.1
 rcssmin==1.1.1
-requests==2.28.2
 rjsmin==1.2.1
-six==1.16.0
-sqlparse==0.4.3
-termcolor==2.2.0
-urllib3==1.26.14
-whitenoise==6.3.0
+sqlparse==0.4.4
+typing_extensions==4.9.0
+tzdata==2024.1
+whitenoise==6.6.0
